[gd_scene load_steps=3 format=3 uid="uid://bkx5q8y7vh3nc"]

[ext_resource type="Script" uid="uid://eflb8jd7j2di" path="res://levels/start_screen/start_screen.gd" id="1_0"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Easy Peasy Multiplayer"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LectureButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Lecture"

[node name="HostLectureButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Lecture"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer Game"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Use arrow keys to navigate slides in lecture mode"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/LectureButton" to="." method="_on_lecture_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HostLectureButton" to="." method="_on_host_lecture_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
